fixed last block not centered

--- a/css/index.css
+++ b/css/index.css
@@ -57,7 +57,12 @@ h2 {
 .mainBlock {
   max-width: 1100px;
   width: 100%;
-  display: inline-block;
+  display: block;
+  margin: 0 auto;
+}
+
+#mCSB_1_container{
+  margin: 0;
 }
 
 /*bootsrap md size is 992 and up*/
